@@ -1,5 +1,5 @@
 Package: MTurkR
-Version: 0.5.6
+Version: 0.5.61
 Date: 2015-01-02
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
