@@ -2,6 +2,7 @@
 
 ## SIGNIFICANT USER-VISIBLE CHANGES ##
 
+* The graphical and text-based wizards now allow you to preview the email that will be sent to workers using the `ContactWorkers` function. (#53)
 * The graphical and text-based wizards now allow users to assign qualifications to workers. (#61)
 * The graphical user interface (`mturkr.wizard`) has a significantly cleaned up code base aimed at simplifying future bug fixes. A user-visible side effect of this is modified aesthetics that should make the interface more attractive and more uniform. (#56)
 * `mturkr.wizard` now allows users to enter multiple WorkerIds for several functions by simply pasting one WorkerId per line into a multi-line textbox. (#52, h/t Justin Weigand)
